# simple-status

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ref.rs  test.rs
sample/: Cargo.toml
sample/src/: button_style.rs  main.rs  state.rs  status_report.rs  task.rs  test_msg.rs  update.rs  view.rs
src/: __private_helper.rs  lib.rs  macros.rs  status_channel.rs  status_emitter.rs  status_emre.rs  status_emrec.rs  status_event.rs  status_format.rs  status_macro.rs
src/channel/: channel_emitter.rs  channel_receiver.rs  emitter.rs  mod.rs  receiver.rs
src/channels/: channel_emitter.rs  channel_receiver.rs  emitter.rs  mod.rs  receiver.rs
src/emitter_receiver/: mod.rs  status_receiver.rs
src/format/: config.rs  mod.rs
src/renderer/: display.rs  mod.rs
src/status/: event.rs  mod.rs
src/status_channel/: channel_receiver.rs  channel_sender.rs  mod.rs
src/status_event/: event.rs  mod.rs  renderer.rs
tests/: simple_status_test.rs
