[package]
name = "simple-status"
version = "0.1.2"
edition = "2024"
authors = ["ziprangga"]
license = "MIT OR Apache-2.0"
description = "Lightweight Rust crate for emitting and tracking status events"
repository = "https://github.com/ziprangga/simple-status"
readme = "README.md"
keywords = ["status", "async", "progress"]
categories = ["asynchronous", "utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[workspace]
members = [
    ".",
    "sample"
]
