[package]
name = "sample"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
simple-status = { path = ".." }
iced = { git = "https://github.com/ziprangga/iced.git", features = [
    "image-without-codecs",
    "tokio",
    "canvas",
    "wgpu",
    "advanced",
] }
tokio-stream = "0.1.18"
