[package]
name = "sample"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
simple-status = { path = ".." }
iced = { git = "https://github.com/ziprangga/iced.git", features = [
    "image-without-codecs",
    "tokio",
    "canvas",
    "wgpu",
    "advanced",
] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
